# sm-metadata-editor-thing

./: .gitignore  README.md  pyproject.toml
src/: change_manager.py  controller.py  field_registry.py  find_toolbar.py  ignore_wheel_filter.py  loader_thread.py  log_viewer.py  main.py  settings_dialog.py  simfile_editor_panel.py  simfile_loader.py  simfile_tree_model.py  simfile_tree_viewer.py  status_display.py
src/editor_fields/: audio_preview.py  base_field_widget.py  file_drop.py  image_display.py  image_widget.py  text_field.py  video_widget.py
src/genre_search/: anime_themes_search.py  genre_normalize_window.py  genre_pick.py  genre_search.py  genre_search_thread.py  last_fm_scraper.py  models.py
src/genre_search/animethemes_client/: client.py  models.py
src/models/: __init__.py  audio_metadata.py  simfile_metadata.py
src/tree_view/: filter_proxy_model.py  simfile_tree_model.py  simfile_tree_viewer.py  tree_view_container.py
src/ui/: main_window.py  settings_dialog.py
src/utils/: app_paths.py  config_manager.py  logger.py  sm_utils.py
