[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sm-metadata-editor"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fuzzytrackmatch @ git+https://github.com/mjvotaw/fuzzytrackmatch@main",
    "simfile>=3.0.0a4",
    "PyQt6>=6.4.0",
    "platformdirs==4.5.1",
    "beautifulsoup4",
    "mutagen"

]

[project.scripts]
sm-metadata-editor = "src.main:main"

[tool.setuptools]
packages = ["src"]